# toy_os

./: Cargo.toml  fbleader.md  rustfmt.toml
.cargo/: config
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  panic.rs  qemu.rs  serial.rs  stdio.rs
src/allocator/: mod.rs
src/context/: context.rs  mod.rs
src/gdt/: mod.rs
src/kernel/: interrupts.rs  mod.rs  serial.rs
src/kernel/context/: context.rs  mod.rs
src/kernel/devices/: mod.rs  vga.rs
src/kernel/vga/: color_code.rs  mod.rs  writer.rs
src/serial/: mod.rs
src/vga/: writer.rs
src/vga_buffer/: chalk.rs  color.rs  color_code.rs  mod.rs
src/vga_text/: color_code.rs  mod.rs  writer.rs
