[package]
name = "toy_os"
version = "0.1.0"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
edition = "2018"

[dependencies]
bootloader = "*"
volatile = "*"
spin = "*"
uart_16550 = "*"
x86_64 = "*"
pic8259_simple = "*"
pc-keyboard = "*"

[dev-dependencies]
array-init = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x86_64-toy_os.json"
