[package]
name = "toy_os"
version = "0.1.0"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.8.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
