[package]
name = "toy_os"
version = "0.1.0"
authors = ["Ivan Mondragon <imondrag@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.2"
uart_16550 = "0.2.7"
rlibc = "1.0.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
